--- a/client/public/registration/regStyle.css
+++ b/client/public/registration/regStyle.css
@@ -39,12 +39,12 @@ body {
     margin-top: 30px;
 }
 
-.wrapper form .input-box {
+.wrapper form .input-area {
     height: 52px;
     margin: 18px 0;
 }
 
-form .input-box input {
+form .input-area input {
     height: 100%;
     width: 100%;
     outline: none;
@@ -58,8 +58,8 @@ form .input-box input {
     transition: all 0.3s ease;
 }
 
-.input-box input:focus,
-.input-box input:valid {
+.input-area input:focus,
+.input-area input:valid {
     border-color: #4070f4;
 }
 
@@ -75,7 +75,7 @@ form h3 {
     margin-left: 10px;
 }
 
-.input-box.button input {
+.input-area.button input {
     color: #fff;
     letter-spacing: 1px;
     border: none;
@@ -83,7 +83,7 @@ form h3 {
     cursor: pointer;
 }
 
-.input-box.button input:hover {
+.input-area.button input:hover {
     background: #0e4bf1;
 }
 
@@ -100,5 +100,55 @@ form .text h3 a {
 }
 
 form .text h3 a:hover {
+    text-decoration: underline;
+}
+
+form .field.error input {
+    border-color: #dc3545;
+}
+
+form input::placeholder {
+    color: #bfbfbf;
+    font-size: 17px;
+}
+
+form .field i {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 18px;
+    pointer-events: none;
+}
+
+form .field .icon {
+    left: 15px;
+    color: #bfbfbf;
+}
+
+form .field .error-icon {
+    right: 15px;
+    color: #dc3545;
+}
+
+form .field .error-text {
+    margin-top: 5px;
+    color: #dc3545;
+    text-align: left;
+}
+
+form .field .error {
+    display: none;
+}
+
+form .field.error .error {
+    display: block;
+}
+
+.wrapper a {
+    color: 5372f0;
+    text-decoration: none;
+}
+
+.wrapper a:hover {
     text-decoration: underline;
 }
