--- a/client/public/stream/shared/css/style.css
+++ b/client/public/stream/shared/css/style.css
@@ -332,3 +332,25 @@ div#message {
   margin-top: 20px;
   margin-bottom: 20px;
 }
+
+#dynamic-list-container {
+  display: flex;
+  gap: 0.625%;
+  margin-left: 60px;
+  margin-top: 40px;
+}
+
+a.live_url:link, a.live_url:visited {
+  background-color: white;
+  color: black;
+  border: 2px solid green;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+
+a.live_url:hover, a.live_url:active {
+  background-color: green;
+  color: white;
+}
