--- a/client/public/stream/shared/css/style.css
+++ b/client/public/stream/shared/css/style.css
@@ -159,7 +159,7 @@ div#message {
 }
 
 .timestamp-button {
-  cursor: default;
+  cursor: pointer;
   border: none;
   width: fit-content;
   background: black;
@@ -174,6 +174,7 @@ div#message {
   font-weight: 600;
   padding: 5px 10px;
   min-width: 70px;
+  margin-top: 38px;
 }
 
 .textarea-container {
@@ -361,3 +362,17 @@ a.saved_url:active {
   background-color: green;
   color: white;
 }
+
+div.horizontal-shake {
+  animation: shaking 1s infinite;
+}
+
+@keyframes shaking {
+  0% { transform: translateX(0) }
+  25% { transform: translateY(-9px) }
+  35% { transform: translateY(-9px) rotate(10deg) }
+  55% { transform: translateY(-9px) rotate(-10deg) }
+  65% { transform: translateY(-9px) rotate(10deg) }
+  75% { transform: translateY(-9px) rotate(-10deg) }
+  100% { transform: translateY(0) rotate(0) }
+ }
